2001-03-03  Roland McGrath  <roland@frob.com>

	* hyper.c (zeroblock, modified_global_blocks): Remove superfluous
	zero initializers.
	(allocate_mod_map): Likewise for static here.
	(get_hypermetadata): Don't munmap old ZEROBLOCK, just keep it.
	Allocate ZEROBLOCK with PROT_READ.

2001-02-28  Roland McGrath  <roland@frob.com>

	* dir.c (count_dirents): Check for bogus rec_len having pushed us past
	the end.

2001-01-08  Marcus Brinkmann  <marcus@gnu.org>

	* ext2fs.c (main): Use %Ld instead %ld to print store->size.
	* hyper.c (get_hypermetadata): Likewise.

2001-01-07  Marcus Brinkmann  <marcus@gnu.org>

	* dir.c: Make diskfs_dirstat_size const.

2000-12-21  Marcus Brinkmann  <marcus@gnu.org>

	* pager.c: Include <errno.h>.
	(create_disk_pager): Panic if malloc fails.
	Reported by Igor Khavkine <i_khavki@alcor.concordia.ca>.

	* inode.c (diskfs_get_translator): If malloc fails, set err to ENOMEM.
	Initialize err with 0, and return it at the end of the function.
	Reported by Igor Khavkine <i_khavki@alcor.concordia.ca>.

2000-12-02  Roland McGrath  <roland@frob.com>

	* inode.c (write_all_disknodes): Call diskfs_set_node_times after
	pokel_sync, since it might delay a little.
	(write_node): Remove assert that dn_set_mtime et al are clear.
	It is ok if they are set in parallel, because the latter setting
	will be carried out eventually.

2000-10-01  Roland McGrath  <roland@frob.com>

	* truncate.c (diskfs_truncate): Use & instead of %.

2000-11-30  Marcus Brinkmann  <marcus@gnu.org>

	* dir.c (diskfs_lookup_hard): If name is too long, clear
	DS before returning ENAMETOOLONG.

2000-10-01  Roland McGrath  <roland@frob.com>

	* inode.c (write_node): Use memcpy instead of a loop.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.
